--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'org.videolan.android:libvlc-all:3.2.5'
     implementation 'com.arthenica:mobile-ffmpeg-full:4.4'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
