--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".ConnectActivity1"/>
         <activity android:name=".ConnectActivity2"/>
         <activity android:name=".ConnectActivity3"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"/>
     </application>
 
 </manifest>
