--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".ConnectActivity1"/>
         <activity android:name=".ConnectActivity2"/>
         <activity android:name=".ConnectActivity3"/>
+        <activity android:name=".StreamingSettingActivity"/>
         <activity android:name=".MainActivity"
             android:configChanges="orientation|screenSize"/>
     </application>
