--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ConnectActivity1"/>
-        <activity android:name=".ConnectActivity2"/>
+        <activity android:name=".ConnectActivity"/>
+        <activity android:name=".MainMenuActivity"/>
         <activity android:name=".StreamingSettingActivity"/>
         <activity android:name=".MainActivity"
             android:configChanges="orientation|screenSize"/>
