--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <activity android:name=".ConnectActivity"/>
         <activity android:name=".MainMenuActivity"/>
-        <activity android:name=".StreamingSettingActivity"/>
+        <activity android:name=".SettingActivity"/>
         <activity android:name=".MainActivity"
             android:configChanges="orientation|screenSize"/>
     </application>
