--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,18 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude("META-INF/*.kotlin_module")
+    }
+
     defaultConfig {
         applicationId "com.example.lenarv03"
         minSdkVersion 26
@@ -44,4 +56,9 @@ dependencies {
     implementation 'org.videolan.android:libvlc-all:3.2.5'
     implementation 'com.arthenica:mobile-ffmpeg-full:4.4'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.apis:google-api-services-youtube:+'
+    implementation 'com.google.api-client:google-api-client-gson:+'
+    implementation 'com.google.http-client:google-http-client-android:+'
+    implementation 'com.google.api-client:google-api-client-android:+'
 }
