--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'androidx.annotation:annotation:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 }
