--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,6 @@ dependencies {
     annotationProcessor 'androidx.annotation:annotation:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
-    implementation 'com.facebook.android:facebook-login:[8.1)'
-    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+//    implementation 'com.facebook.android:facebook-login:[8.1)'
+//    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 }
