--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".MainMenuActivity"/>
         <activity android:name=".SettingActivity"/>
         <activity android:name=".livestream.LiveSelectActivity"/>
-        <activity android:name=".livestream.LiveSettingActivity"/>
+        <activity android:name=".livestream.YtbSettingActivity1"/>
+        <activity android:name=".livestream.YtbSettingActivity2"/>
         <activity android:name=".livestream.LiveStreamActivity"/>
         <activity android:name=".MainActivity"
             android:configChanges="orientation|screenSize"/>
