--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,13 @@ android {
     packagingOptions {
         pickFirst 'lib/x86/libc++_shared.so'
         pickFirst 'lib/x86_64/libc++_shared.so'
+        pickFirst 'lib/x86/libswscale.so'
+        pickFirst 'lib/x86/libavcodec.so'
+        pickFirst 'lib/x86_64/libavcodec.so'
+        pickFirst 'lib/x86/libavutil.so'
+        pickFirst 'lib/x86_64/libavutil.so'
+        pickFirst 'lib/x86_64/libswscale.so'
+        pickFirst 'lib/armeabi-v7a/libavdevice.so'
         pickFirst 'lib/armeabi-v7a/libc++_shared.so'
         pickFirst 'lib/arm64-v8a/libc++_shared.so'
     }
@@ -64,6 +71,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'androidx.annotation:annotation:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.arthenica:ffmpeg-kit-full:4.5.LTS'
 
 //    implementation 'com.facebook.android:facebook-login:[8.1)'
 //    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
