--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,18 +38,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     packagingOptions {
-        pickFirst 'lib/x86/libc++_shared.so'
-        pickFirst 'lib/x86_64/libc++_shared.so'
-        pickFirst 'lib/x86/libswscale.so'
-        pickFirst 'lib/x86/libavcodec.so'
-        pickFirst 'lib/x86_64/libavcodec.so'
-        pickFirst 'lib/x86/libavutil.so'
-        pickFirst 'lib/x86_64/libavutil.so'
-        pickFirst 'lib/x86_64/libswscale.so'
-        pickFirst 'lib/armeabi-v7a/libavdevice.so'
-        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
         pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        pickFirst 'lib/x86_64/libc++_shared.so'
+        pickFirst 'lib/x86/libc++_shared.so'
+        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+
     }
 }
 
@@ -61,18 +56,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'org.videolan.android:libvlc-all:3.2.5'
-    implementation 'com.arthenica:mobile-ffmpeg-full:4.4'
-    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.apis:google-api-services-youtube:+'
     implementation 'com.google.api-client:google-api-client-gson:+'
     implementation 'com.google.http-client:google-http-client-android:+'
     implementation 'com.google.api-client:google-api-client-android:+'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.arthenica:ffmpeg-kit-full-gpl:4.5'
     annotationProcessor 'androidx.annotation:annotation:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-    implementation 'com.arthenica:ffmpeg-kit-full:4.5.LTS'
 
-//    implementation 'com.facebook.android:facebook-login:[8.1)'
-//    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 }
